--- a/mediakit.html
+++ b/mediakit.html
@@ -19,27 +19,33 @@
                 <nav>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="about.html">About Me</a></div>
-                    <div><a href="blog.html">Blog</a></div>
+                    <div><a href="consultations.html">Consultations</a></div>
                     <div><a href="mediakit.html">Media Kit</a></div>
                     <div><a href="contact.html">Contact</a></div>
                 </nav>
             </aside>
             <nav>
-                <ul class="hide-mobile" id="nav">
-                    <li id="list"><a href="index.html">Home</a></li>
-                    <li id="list"><a href="about.html">About Me</a></li>
-                    <li id="list"><a href="blog.html">Blog</a></li>
-                    <li id="list"><a href="mediakit.html">Media Kit</a></li>
-                    <li id="list"><a href="contact.html">Contact</a></li>
-                </ul>
+                <div class="hide-mobile" id="nav">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Me</a>
+                    <div class="dropdown">
+                      <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
+                      <div class="dropdown-content">
+                        <a href="consultVan.html">Vanlife</a>
+                        <a href="consultWeb.html">Website Development</a>
+                      </div>
+                    </div>
+                    <a href="mediakit.html">Media Kit</a>
+                    <a href="contact.html">Contact</a>
+                  </div>
             </nav>
         </header>
         <div style="width: 100%; height: 0; padding-top: 231.9180%;
-            padding-bottom: 0; margin-top: .3em; margin-bottom: 0; overflow: hidden; will-change: transform;">
+            padding-bottom: 0; margin-top: 1em; margin-bottom: 0; overflow: hidden; will-change: transform;">
             <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
                 src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF26WK6RbQ&#x2F;view?embed" >
             </iframe>
-    </div>
+        </div>
     </div>
 
     <footer class="footer">
