--- a/index.html
+++ b/index.html
@@ -10,71 +10,71 @@
     <link rel="stylesheet" href="style/footer.css">
 </head>
 <body>
-    <div class="content">
-        <header>
-            <label class="hide-desktop hamburger-menu">
-                <input type="checkbox">
-            </label> 
-            <aside class="sidebar hide-desktop">
-                <nav>
-                    <div><a href="index.html">Home</a></div>
-                    <div><a href="about.html">About Me</a></div>
-                    <div><a href="blog.html">Blog</a></div>
-                    <div><a href="mediakit.html">Media Kit</a></div>
-                    <div><a href="contact.html">Contact</a></div>
-                </nav>
-            </aside>
+    <header>
+        <label class="hide-desktop hamburger-menu">
+            <input type="checkbox">
+        </label> 
+        <aside class="sidebar hide-desktop">
             <nav>
-                <ul class="hide-mobile" id="nav">
-                    <li id="list"><a href="index.html">Home</a></li>
-                    <li id="list"><a href="about.html">About Me</a></li>
-                    <li id="list"><a href="blog.html">Blog</a></li>
-                    <li id="list"><a href="mediakit.html">Media Kit</a></li>
-                    <li id="list"><a href="contact.html">Contact</a></li>
-                </ul>
+                <div><a href="index.html">Home</a></div>
+                <div><a href="about.html">About Me</a></div>
+                <div><a href="consultations.html">Consultations</a></div>
+                <div><a href="mediakit.html">Media Kit</a></div>
+                <div><a href="contact.html">Contact</a></div>
             </nav>
-        </header>
-
-        <div class="picture-container">
-            <img src="img/mobileHeaderPhoto.jpg" class="hide-desktop" id="mobile-main-img" alt="img">
-            <img src="img/headerPhoto.jpg" class="hide-mobile" id="main-img" alt="img">
-        </div>
-
-        <div class="about-container">
-            <h1 class="section-header">About Me</h1>
-            <div class="about-section">
-                <div class="about-text">
-                    <h3>Hi there, I'm Anjali.</h3>
-                    <br>
-                    <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theodore and Remington and share my stories of solo travel, DIY building, and tiny living.</p>
-                    <br>
-                    <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support each others dreams, spread love, and are excited to share in this journey we're all on together.</p>
-                    <br>
-                    <p>Come follow along on my adventures!</p>
-                    <br>
-                    <button class="collab-button"><a href="about.html">More about me</a></button>
+        </aside>
+        <nav>
+            <div class="hide-mobile" id="nav">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+                <div class="dropdown">
+                  <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
+                  <div class="dropdown-content">
+                    <a href="consultVan.html">Vanlife</a>
+                    <a href="consultWeb.html">Website Development</a>
+                  </div>
                 </div>
-                <div class="about-img">
-                    <img src="img/about.jpg" class="hide-mobile" id="profile-img" alt="img">
-                </div>
+                <a href="mediakit.html">Media Kit</a>
+                <a href="contact.html">Contact</a>
+              </div>
+        </nav>
+    </header>
+
+    <div class="picture-container">
+        <img src="img/mobileHeaderPhoto.jpg" class="hide-desktop" id="mobile-main-img" alt="img">
+        <img src="img/headerPhoto.jpg" class="hide-mobile" id="main-img" alt="img">
+    </div>
+
+    <div class="about-container">
+        <h1 class="section-header">About Me</h1>
+        <div class="about-section">
+            <div class="about-text">
+                <h3>Hi there, I'm Anjali.</h3>
+                <br>
+                <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theodore and Remington and share my stories of solo travel, DIY building, and tiny living.</p>
+                <br>
+                <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support each others dreams, spread love, and are excited to share in this journey we're all on together.</p>
+                <br>
+                <p>Come follow along on my adventures!</p>
+                <br>
+                <button class="collab-button"><a href="about.html">More about me</a></button>
             </div>
-        </div>  
-        <div class="collab-container">
-            <h2>Lets work together!</h2>
-            <div class="collab-blurb">
-                <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my followers.</p>
-                <br>
-                <p>Interested in working together on a project?</p>
-                <br>
-                <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
-                <br>
+            <div class="about-img">
+                <img src="img/about.jpg" class="hide-mobile" id="profile-img" alt="img">
             </div>
         </div>
-        <!-- <div class="instagram-container hide-mobile">
-            <h2>Follow along on instagram</h2>
-            <iframe src='https://www.juicer.io/api/feeds/anjalijustice/iframe' frameborder='0' width='100%' height='300px' style='display:block; margin:0 auto;'></iframe>
+    </div>  
+    <div class="collab-container">
+        <h2>Lets work together!</h2>
+        <div class="collab-blurb">
+            <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my followers.</p>
+            <br>
+            <p>Interested in working together on a project?</p>
+            <br>
+            <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
+            <br>
         </div>
-    </div> -->
+    </div>
     <footer class="footer">
         <ul class="footer-social-icon">
             <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://instagram.com/anjalijustice">
